# AI-secrenar-with-Asterisk

./: .gitattributes  .gitignore  README.md  dev_run_ari.ps1  pyproject.toml  requirements.txt
data/kb/: mikizol_by_category.md
data/tts/: stress_dict.example.txt
docs/: elevenlabs_voices.md  integration_smoke.md  legacy_asya_analysis.md
scripts/: check_env.cmd  check_env.ps1  check_no_bom.ps1  dev_run_api.ps1  dev_run_api.sh  diag_publish_win.ps1  latency_report.py  load_env.ps1  make_demo_audio.py  preflight_win.ps1  run_ari.cmd  run_ari.ps1  ssh_key_check.ps1
src/ai_secretary/: __init__.py  __main__.py
src/ai_secretary/api/: calls.py  health.py  main.py
src/ai_secretary/config/: __init__.py  settings.py
src/ai_secretary/core/: __init__.py  logging.py  models.py  runner.py  utils.py
src/ai_secretary/db/: __init__.py  repositories.py  sqlite.py
src/ai_secretary/llm/: __init__.py  llm_client.py  parsers.py  response_agent.py  summary_agent.py  system_commands.py
src/ai_secretary/rag/: __init__.py  chunker.py  embeddings.py  kb_loader.py  (+1 more)
tests/: conftest.py  test_ari_client_moh.py  test_ari_client_play.py  test_ari_client_record_params.py  test_ari_client_ws_single_connection.py  test_ari_publish_fallback.py  test_artifacts.py  test_artifacts_text.py  test_dialog_flow.py  test_latency_report.py  test_parsers.py  test_publish_batchmode.py  test_publish_ffmpeg_skip.py  test_publish_sound_id.py  test_rag.py  test_rag_embeddings_cache.py  test_runner.py  test_runner_events_jsonl.py  test_tts_normalize.py  test_tts_silero_hub.py  test_tts_stress_overrides.py
(+39 files in other folders)
